# marites

./: BUILD_INSTRUCTIONS.md  README.md  analyze_output.txt  build_errors.txt  build_verbose.txt  pubspec.yaml  test_subprocess.dart
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/example/gemma_local_ai/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/llama/: CMakeLists.txt
lib/: main.dart
lib/ai/: llama_service.dart
lib/providers/: llama_provider.dart
lib/screens/: chat_screen.dart
llama_prebuilt/: build_wrapper.bat  ggml.def  ggml.exp  ggml.lib  ggml_exports.txt  help.txt  llama.def  llama.exp  llama.lib  llama_exports.txt  llama_wrapper.exp  llama_wrapper.lib  server_help.txt
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/Runner/llama/: CMakeLists.txt
native/: llama_wrapper.cpp  llama_wrapper.h
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
windows/runner/llama/: CMakeLists.txt  cmake_error.txt
